--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,3 +1,3 @@
 # Put application-specific config here (application name: client-config-app)
-some.property=Mohamed hussein Final test
+some.property=Mohamed hussein : is changed locally ??
 
